[metadata]
name = "rast_common_python"
version = "1.0"
author = "Juri Tomak"
author_email = "jtomak@uni-muenster.de"
license = "MIT"
description = "Python classes and functions used in multiple components of our RAST implementation."
url = "https://github.com/your-username/your-package"

[options]
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.classifiers]
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent

[options.install_requires]
# List your dependencies here
