[metadata]
name = rast_common_python
version = 1.0.0
author = Juri Tomak
author_email = jtomak@uni-muenster.de
license = MIT
description = Python classes and functions used in multiple components of our RAST implementation.
url = https://github.com/jtpgames/RAST-Common-Python.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
install_requires =
    SQLAlchemy~=2.0.11

[options.packages.find]
where = src
